# datamodel/loot_report.go
@@ -9,10 +9,10 @@ import (
 type LootReport struct {
 	IDModelIntrinsic
 
-	StageID int64  `gorm:"column:stage_id;index:idx_server_stage,priority:2" json:"stage_id"`
-	Server  string `gorm:"column:server;index:idx_server_stage,priority:1" json:"server"`
-	Source  string `gorm:"column:source" json:"source"`
-	Version string `gorm:"column:version" json:"version"`
+	EpisodeID int64  `gorm:"column:episode_id;index:idx_server_episode,priority:2" json:"episode_id"`
+	Server    string `gorm:"column:server;index:idx_server_episode,priority:1" json:"server"`
+	Source    string `gorm:"column:source" json:"source"`
+	Version   string `gorm:"column:version" json:"version"`
 
 	Loot []*LootItem `gorm:"-"`
 
@@ -47,35 +47,46 @@ type LootReportList []*LootReport
 
 func (l *LootReportList) LoadByRequest(db *gorm.DB, req *requests.QueryReportRequest) error {
 
-	if err := utils.WithTransaction(db,
-		func(tx *gorm.DB) error {
+	if err := l.rawLoadByRequest(db, req); err != nil {
+		return err
+	}
 
-			// filter server
-			if req.Server != "" {
-				db = db.Where("server = ?", req.Server)
-			}
+	// filter items
+	queryItems := utils.NewSet(req.Items...)
+	for _, r := range *l {
+		lootItemList := &LootItemList{}
+		if err := lootItemList.LoadByReportUUID(db, r.UUID); err != nil {
+			return err
+		}
 
-			// filter stages
-			if len(req.Stages) > 0 {
-				db = db.Where("stage_id in (?)", req.Stages)
-			}
-
-			if err := db.Model(&LootReport{}).Find(l).Error; err != nil {
-				return err
-			}
-
-			for _, r := range *l {
-				lootItemList := &LootItemList{}
-				if err := lootItemList.LoadByReportUUID(tx, r.UUID); err != nil {
-					return err
+		if queryItems.IsEmpty() {
+			// without filter
+			r.Loot = *lootItemList
+		} else {
+			// only load required items
+			for _, lootItem := range *lootItemList {
+				if queryItems.Contains(lootItem.ItemID) {
+					r.Loot = append(r.Loot, lootItem)
 				}
-
-				r.Loot = *lootItemList
 			}
+		}
+	}
 
-			return nil
-		},
-	); err != nil {
+	return nil
+}
+
+func (l *LootReportList) rawLoadByRequest(db *gorm.DB, req *requests.QueryReportRequest) error {
+	// filter server
+	if req.Server != "" {
+		db = db.Where("server = ?", req.Server)
+	}
+
+	// filter episodes
+	if len(req.Episodes) > 0 {
+		db = db.Where("episode_id in (?)", req.Episodes)
+	}
+
+	if err := db.Model(&LootReport{}).Find(l).Error; err != nil {
 		return err
 	}
 
